fixed spacing when displaying vaccine records

--- a/VacciMate/frontend/homepage/borderstyle.css
+++ b/VacciMate/frontend/homepage/borderstyle.css
@@ -61,7 +61,7 @@ body {
   padding: 20px;
   text-align: left;
   margin: 20px;
-  width: 95%;
+  width: 90%;
   height: auto; /* Adjust height to "auto" to accommodate dynamic content */
   float: left;
 }
